# deltazip

./: .dockerignore  .gitignore  .readthedocs.yml  README.md  get_shell.sh  playground.ipynb  requirements.txt  setup.py  test.json  todos.md
.build/qigen/: README.md  forward.h  tmp.csv
artifact/: .gitignore  7b_job.json  analyze.ipynb  benchmark_results.json  config.json  config_3b.json
artifact/client/: local_workload.py  run_3b_benchmark.py  run_7b_benchmark.py  run_benchmark.py  run_hf.py  run_workload.py
artifact/compress_experiments/: compress_all_2.8b.py  compress_all_llama.py  compress_all_llama_nodelta.py  compress_all_models.py  compression_rate_checkpoint.py  eval_all_finetuned_raw.py  eval_chat_models.py  generate_all_compressed.py  lossless_compress_all_2.8b.py
artifact/eval/: README.md  compress_all_models.py  generate_all_compressed.py  postprocess_all_generated.py
artifact/experiments/: autocompress_all_2.8b.py  compress_all_llama.py  lossless_compress_all_2.8b.py
artifact/plots/: plot_ablation_sequence.py  plot_all.py  plot_all.sh  plot_cdf.py  plot_combined_latency_breakdown.py  plot_combined_model_quality.py  plot_combined_model_quality_violin.py  plot_combined_ni_model_quality.py  plot_combined_ni_model_quality_secondary.py  plot_combined_slo.py  plot_combined_throughput.py  plot_e2e_latency.py  plot_e2e_latency_micro.py  plot_e2e_workload.py  plot_latency.py  plot_latency_breakdown.py  plot_length.py  plot_micro_benchmark.py  plot_micro_benchmark_batch.py  plot_slo.py  (+5 more)
benchmarks/: benchmark_nvcomp.py  e2e_benchmark_nvcomp.py  nvcomp_delta.py  report.md
cli/: auto_compress.py  benchmark_nvcomp.py  chat.py  chat_eval.py  chat_merged.py  chat_moe.py  cli.py  compress.py  compress_lora.py  compress_moe.py  compress_v2.py  decompress.py  decompress_debug.py  delta_preset.py  e2e_benchmark_nvcomp.py  fmzip.py  fmzip_server.py  generate.py  lmsys_generate.py  lossless_compress.py  merge.py  mpm_generate.py  naive.py  ni_delta_main.py  ni_eval.py  ni_eval_debug.py  ni_eval_gptq.py  ni_eval_v2.py  ni_evaluate.py  ni_evaluate_debug.py  ni_evaluate_lessmem.py  ni_evaluate_nocompress.py  ni_generate.py  ni_main.py  ni_output.sh  nvcomp.sh  nvcomp_delta.py  preset.py  restore.py  save_moe.py  (+1 more)
container/: Dockerfile
csrc/nvcomp/src/: CMakeLists.txt  batch_data.cuh  benchmark.cu  benchmark_template_chunked.cuh  common.cuh  common.h  compress.cu  compress_and_export.cu  decompress.cu  deflate_cpu_compression.cu
deltazip/: __init__.py
docker/: Dockerfile
examples/: decompress_multiple_gpus.py  hybrid_generation.py  load_back.py  lossless_compression.py  lossy_compression.py  opt_1.3b.sh  opt_1.3b_eval.sh  opt_1.3b_eval_base.sh  quantize_model.py  sparsification_model.py  test.py
experiments/: autocompress_all_2.8b.py  benchmark_fmzip_naive.sh  ci_per_eval.py  compile_csv.py  compile_csv_for_othertasks.py  compress_all_2.8b.py  compress_all_2.8b_nodelta.py  compress_all_llama.py  compress_nodelta.py  compress_opt_1.3b.py  compress_opt_1.3b_dir.py  compress_opt_6.7b.py  compression_rate_checkpoint.py  compression_rate_finetuned_ni.py  eval_compressed.py  eval_finetuned.py  eval_finetuned_cross_tasks.py  eval_finetuned_gptq.py  lossless_compress_all_2.8b.py  lossless_compression.py  ni_to_stats.py  post_process_eval.py  zip_compressed_models.py
fmzip/: __init__.py  dataloader.py
meta/: get_shell.sh
notebooks/: explore.ipynb  explore_lora.ipynb  explore_moe.ipynb  playground.py
playground/: calculator.py  model_diff.ipynb  ni_eval_noquant.py  nvcomp_delta.py  save_size.py
plots/: compression_rate.py
results/: analyse.ipynb  cross_task_eval_results.csv  eval_results.csv  main_tasks.csv  other_tasks.csv  word_semantics_eval_results.csv
scripts/: 1.1_test_generate.sh  1_compress_7b.sh  2.1_compress_baselines.sh  2.2_eval_baselines.sh  2_eval_quality_compressed.sh  2_eval_quality_original.sh  3.1_serve_delta.sh  3.2_serve_full.sh  3_compress_13b.sh  3_prepare_delta.sh  3_prepare_full_model.sh  4_cleanup.sh  benchmark_e2e_nvcomp.sh  benchmark_nvcomp.sh  calculator.sh  env.sh  fmzip_cli_examples.sh  install.sh  naive.sh  ni_output.sh  nvcomp.sh  opt_1.3b_eval.sh  start_rest.sh  test_autocomress_opt.sh  test_ni_main.sh
serving/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.new  collect_env.py  compile.sh  format.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/: __init__.py  dataloader.py  gptq.py  main.py  quant.py  test.py
test/: pack_unpack.py
tests/: decompress_gpu_id.py  e2e_correctness.py  hybrid_generation.py  pack_unpack.py  tensor_inspect.py  tensor_io.py  unpacking.py
(+655 files in other folders)
